# catmu

./: ConvolutionLUT.ipynb  LICENSE  MANIFEST.in  Notebook.ipynb  README.md  setup.cfg  setup.py
catmu/: Makefile  __init__.py  analysis1.py  analysis2.py  analysis3.py  analysis_tools.py  api.py  kernel_d00.cu  kernel_d01.cu  kernel_d02.cu  kernel_v0_1.cu  lutConvolutionLauncher.cu  measured_psf.npz  profile_multiple_launcher.py  profile_suppose.py  structures.py  tmu_simulator.py  wrapper.py  wrapper_stable.py
catmu/cuda/: Makefile  catmu.h  exprConvolution.cu  lutConvolution.cu  lutConvolution.h  ufunctions.h
catmu/cuda_sources/: Makefile  convolution_lut.h  kernel_d01.cu  kernel_d03.cu  kernel_v0_1.cu  kernel_v0_2.cu  kernel_v0_3.cu  kernel_v0_4.cu  lutMultipleLauncher.cu  textures.cu
catmu/tests/: test_analysis_tools.py  test_api.py  test_structures.py
