[metadata]
name = catmu
author = Alejandro Ezequiel Mazzeo
author_email = ale.exactas@gmail.com
license = BSD
description = A small but useful package to load, validate and use typed data structures, including configuration files.
long_description = file: README.md
keywords = cuda, tmu, textures, convolution
url = https://github.com/alemazzeo/catmu

[options]
packages = catmu
include_package_data = True
python_requires = >=3.6
install_requires = setuptools, ctypes, numpy, matplotlib, pathlib;
setup_requires = setuptools;